fix spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'Nunito', sans-serif;
+  font-family: "Nunito", sans-serif;
   color: #21683d;
-  font-size: 16pt
+  font-size: 16pt;
 }
 
 body {
@@ -37,17 +37,17 @@ body {
   margin-left: 5%;
 }
 
-#searchInput{
-  font-size: 12pt
+#searchInput {
+  font-size: 12pt;
 }
 
 #searchButton {
-  font-size: 12pt
+  font-size: 12pt;
 }
 
 h1 {
   color: #21683d;
-  font-family: 'Dancing Script', cursive;
+  font-family: "Dancing Script", cursive;
   font-size: 65px;
   font-style: normal;
   font-weight: 400;
@@ -69,7 +69,7 @@ h1 {
   background-color: #e9f0e7;
   border: 2px solid #3eb23e;
   border-radius: 45%;
-  font-family: 'Kanit', sans-serif;
+  font-family: "Kanit", sans-serif;
   cursor: pointer;
 }
 
@@ -180,7 +180,7 @@ h1 {
 
 .spacer {
   height: 50px;
-  width: 200px
+  width: 200px;
 }
 
 .instructions {
@@ -210,7 +210,6 @@ h1 {
     visibility: visible;
   }
 }
-
 
 /* Hidden Property */
 .hidden {
